Fixed bug #33394 (Socket Timeout on SOAP request causes general exception in Apache process).